adjust naming system

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: st2
-Theme URI: http://example.com
-Author: The Pinegrow Team
-Author URI: http://pinegrow.com/
+Theme Name: PGWPBS4StarterPlus
+Theme URI: http:/michde.com
+Author: Mich De
+Author URI: http://michde.com/
 Description: The Pinegrow WordPress Starter Theme 2 (ST2) is a foundation/framework for quickly developing your own custom themes. It is based on Bootstrap 4.x, with a complete set of WordPress common templates and support for Jetpack & WooCommerce. The Pinegrow WordPress Starter Theme 2 is deeply inspired by the <a href="https://understrap.com/">UnderStrap theme</a> and numerous components/files are directly forked from this awesome project.
 Version: 1.0
 License: GNU General Public License v2 or later
